# dest

./: BAutil.cpp  BAutil.h  CMakeLists - Ceres.txt  CMakeLists.txt  CMakeLists_Ceres.txt  Compilation.txt  DataStructure.h  FundamentalMatrixEstimator.h  Geometry.cpp  Geometry.h  ImagePro.cpp  ImagePro.h  USAC.h  Ultility.cpp  Ultility.h  VideoSequence.cpp  VideoSequence.h  Visualization.cpp  Visualization.h  _modelest.h  main.cpp  mainbk.cpp  runSiftOpencvandshowMatches.txt
ARTag/: Alvar.h  CMakeLists.txt  alvar200.lib  alvar200d.lib  main.cpp
MovingCameraSyncPartiallyWorking- Require pretty good initial guess/: BAutil.cpp  DataStructure.h  Geometry.h  HomographyEstimator.h  ImagePro.cpp  ImagePro.h  Ultility.cpp  Ultility.h  VideoSequence.cpp  Visualization.cpp  Visualization.h  main.cpp
SiftGPU/lib/: SIFTGPU.exp  SIFTGPU.lib  SIFTGPU_d.exp  SIFTGPU_d.lib  TestBase_x64.lib  TestBase_x64_d.lib
SiftGPU/msvc/ServerSiftGPU/Debug_x64/: vc120.idb
SiftGPU/msvc/ServerSiftGPU/Debug_x64/SiftGPU_Server.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SiftGPU/msvc/ServerSiftGPU/Release_x64/SiftGPU_Server.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  (+2 more)
SiftGPU/msvc/SiftGPU/: SiftGPU.vcxproj
SiftGPU/msvc/SiftGPU/Debug_x64/: vc120.idb
SiftGPU/msvc/TestWin/SimpleSIFT_Debug_x64/: vc120.idb
SiftGPU/msvc/TestWin/Speed_Debug_x64/: vc120.idb
SiftGPU/msvc/TestWin/TestBase_Debug_x64/: vc120.idb
SiftGPU/msvc/TestWin/TestWinGlut_Debug_x64/: vc120.idb
SiftGPU/msvc/TestWin/TestWin_Debug_x64/: vc120.idb
SiftGPU/src/TestWin/: SimpleSIFT.cpp
StationaryCameraSyncWorking/: BAutil.h  DataStructure.h  FundamentalMatrixEstimator.cpp  FundamentalMatrixEstimator.h  Geometry.cpp  HomographyEstimator.cpp  Matrix.cpp  USAC.cpp  Ultility.cpp  Ultility.h  VideoSequence.h  _modelest.h  main.cpp
gsl/: gsl_matrix_double.h  gsl_sys.h
gsl/lib/Debug/: gsl.lib  gslbspline.lib
gsl/lib/Release/: gsl.lib  gslbspline.lib
(+72 files in other folders)
