cmake_minimum_required(VERSION 2.8)
project( EventReconstruction )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O4")
find_package( OpenCV REQUIRED )
add_executable( EventReconstruction main.cpp VideoSequence.cpp Visualization.cpp Geometry.cpp BAutil.cpp ImagePro.cpp  Matrix.cpp Ultility.cpp USAC.cpp FundamentalMatrixEstimator.cpp HomographyEstimator.cpp)
target_link_libraries( EventReconstruction ${OpenCV_LIBS})
