cmake_minimum_required(VERSION 2.8)
project( EventReconstruction )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O4")
find_package( OpenCV REQUIRED )
set(Boost_INCLUDE_DIR C:/Users/mvo/Research/Opensoft/boost_1_57_0)
set(Boost_LIBRARY_DIR C:/Users/mvo/Research/Opensoft/boost_1_57_0/libs)
FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_LIBRARY_DIR})
add_executable( EventReconstruction main.cpp VideoSequence.cpp Visualization.cpp Geometry.cpp BAutil.cpp ImagePro.cpp  Matrix.cpp Ultility.cpp USAC.cpp FundamentalMatrixEstimator.cpp HomographyEstimator.cpp)
target_link_libraries( EventReconstruction ${OpenCV_LIBS} ${Boost_LIBRARIES})
