cmake_minimum_required(VERSION 2.8)
project( EventReconstruction )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O4")
find_package( OpenCV REQUIRED )

IF(WIN32) 
  if(MSVC) 
	INCLUDE_DIRECTORIES(C:/Users/mvo/Documents/GitHub/Dsfm/vlfeat)
	link_directories(C:/Users/mvo/Documents/GitHub/Dsfm/vlfeat/bin/win64)
  endif()
elseif(UNIX)
  INCLUDE_DIRECTORIES(vlfeat)
	link_directories(vlfeat/bin/glnxa64)
else()
  message(SEND_ERROR "You are on an unsupported platform! (Not Win32 or Unix)")
ENDIF()

add_executable( EventReconstruction main.cpp VideoSequence.cpp Visualization.cpp Geometry.cpp ImagePro.cpp  Matrix.cpp Ultility.cpp USAC.cpp FundamentalMatrixEstimator.cpp HomographyEstimator.cpp)
target_link_libraries( EventReconstruction ${OpenCV_LIBS} vl.lib)
